Remove email addresses from AUTHORS

--- a/docs/AUTHORS
+++ b/docs/AUTHORS
@@ -1,7 +1,7 @@
-Created by: Dan McNulty <dkmcnulty@gmail.com>
+Created by: Dan McNulty
 
 Contributions by:
-- Tycho Andersen <tycho@tycho.ws>
+- Tycho Andersen
 
 Please refer to the Git history for a description of changes by each
 contributor.
